Add .dexter/ and fix.md to .gitignore
Prevents project-root .dexter/scratchpad/ runtime data from being
staged. Also ignores fix.md (local review fix tracking).

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ logs/pm2*.log
 
 # Dexter runtime data
 src/dexter/.dexter/
+.dexter/
 
 # Build output
 dist/
@@ -32,3 +33,4 @@ TODO.md
 PLAN.md
 project_outline.md
 AGENTS.md
+fix.md
